# SonoGraf

./: CMakeLists.txt  README.md
audio/: AudioInput.cpp  AudioManager.cpp  AudioOutput.cpp  AudioOutput.hpp
src/: SonoGraf.cpp  SonoGraf.hpp  main.cpp
src/Graphic/Bouton/: Bouton.cpp  Bouton.hpp
src/Graphic/ChooseMusic/: ChooseMusic.cpp  ChooseMusic.hpp  FileExplorer.cpp  FileExplorer.hpp
src/Graphic/Menu/: Menu.cpp
src/Graphic/Osilator/: Osilator.cpp  Osilator.hpp
src/Graphic/Plan/: Plan.cpp  Plan.hpp
src/Graphique/Bouton/: Bouton.cpp
src/Graphique/ChooseMusic/: ChooseMusic.cpp  FileExplorer.hpp
src/Graphique/Menu/: Menu.cpp  Menu.hpp
src/Graphique/Plan/: Plan.cpp  Plan.hpp
src/audio/: AudioInput.hpp  AudioProcessor.cpp
src/audio/AudioInput/: AudioManager.hpp
src/audio/AudioOutput/: AudioOutput.cpp  AudioOutput.hpp
src/audio/AudioProcessor/: AudioProcessor.cpp  AudioProcessor.hpp
